fix: include source in release

--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-native": "src/index",
     "files": [
         "android",
+        "src",
         "!android/build",
         "ios",
         "!ios/build",
