--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-    "name": "react-native-fast-image",
-    "version": "8.5.11",
-    "description": "🚩 FastImage, performant React Native image component.",
+    "name": "@cuvent/react-native-fast-image",
+    "version": "8.6.0",
+    "description": "🚩 FastImage, performant React Native image component. Cuvent fork.",
     "keywords": [
         "cache",
         "cached",
@@ -9,26 +9,30 @@
         "image",
         "priority"
     ],
-    "homepage": "https://github.com/DylanVann/react-native-fast-image#readme",
+    "homepage": "https://github.com/cuvent/react-native-fast-image#readme",
     "bugs": {
-        "url": "https://github.com/DylanVann/react-native-fast-image/issues"
+        "url": "https://github.com/cuvent/react-native-fast-image/issues"
     },
     "repository": {
         "type": "git",
-        "url": "https://github.com/DylanVann/react-native-fast-image.git"
+        "url": "https://github.com/cuvent/react-native-fast-image.git"
     },
     "license": "(MIT AND Apache-2.0)",
     "author": "Dylan Vann <dylan@dylanvann.com> (https://dylanvann.com)",
     "main": "dist/index.cjs.js",
     "module": "dist/index.js",
     "typings": "dist/index.d.ts",
+    "source": "src/index",
+    "react-native": "src/index",
     "files": [
         "android",
+        "src",
         "!android/build",
         "ios",
         "!ios/build",
         "dist",
-        "RNFastImage.podspec"
+        "RNFastImage.podspec",
+        "!**/*.test.*"
     ],
     "scripts": {
         "build": "dv-scripts build && cp src/index.js.flow dist/index.js.flow && cp src/index.js.flow dist/index.cjs.js.flow",
