--- a/ReactNativeFastImageExample/android/app/build.gradle
+++ b/ReactNativeFastImageExample/android/app/build.gradle
@@ -78,7 +78,7 @@ import com.android.build.OutputFile
  */
 
 project.ext.react = [
-    enableHermes: false,  // clean and rebuild if changing
+    enableHermes: true,  // clean and rebuild if changing
 ]
 
 apply from: "../../node_modules/react-native/react.gradle"
@@ -120,6 +120,12 @@ def jscFlavor = 'org.webkit:android-jsc:+'
  */
 def enableHermes = project.ext.react.get("enableHermes", false);
 
+/**
+ * Architectures to build native code for in debug.
+ */
+def nativeArchitectures = project.getProperties().get("reactNativeDebugArchitectures")
+
+
 android {
     ndkVersion rootProject.ext.ndkVersion
 
@@ -151,6 +157,11 @@ android {
     buildTypes {
         debug {
             signingConfig signingConfigs.debug
+            if (nativeArchitectures) {
+                ndk {
+                    abiFilters nativeArchitectures.split(',')
+                }
+            }
         }
         release {
             // Caution! In production, you need to generate your own keystore file.
@@ -205,6 +216,8 @@ dependencies {
     } else {
         implementation jscFlavor
     }
+
+    implementation project(':rnfastimage')
 }
 
 // Run this once to be able to run the application with BUCK
