--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-    "name": "@cuvent/react-native-fast-image",
+    "name": "@valery-lavrik/react-native-fast-image",
     "version": "8.6.0",
-    "description": "🚩 FastImage, performant React Native image component. Cuvent fork.",
+    "description": "🚩 FastImage, performant React Native image component. valery-lavrik fork.",
     "keywords": [
         "cache",
         "cached",
@@ -9,13 +9,13 @@
         "image",
         "priority"
     ],
-    "homepage": "https://github.com/cuvent/react-native-fast-image#readme",
+    "homepage": "https://github.com/valery-lavrik/react-native-fast-image#readme",
     "bugs": {
-        "url": "https://github.com/cuvent/react-native-fast-image/issues"
+        "url": "https://github.com/valery-lavrik/react-native-fast-image/issues"
     },
     "repository": {
         "type": "git",
-        "url": "https://github.com/cuvent/react-native-fast-image.git"
+        "url": "https://github.com/valery-lavrik/react-native-fast-image.git"
     },
     "license": "(MIT AND Apache-2.0)",
     "author": "Dylan Vann <dylan@dylanvann.com> (https://dylanvann.com)",
