--- a/package.json
+++ b/package.json
@@ -81,7 +81,7 @@
         "typescript": "^4.3.5"
     },
     "peerDependencies": {
-        "react": "^16.8.6 || ^17.0.0",
+        "react": "^18.0.0",
         "react-native": ">=0.60.0"
     }
 }
