--- a/ReactNativeFastImageExample/android/settings.gradle
+++ b/ReactNativeFastImageExample/android/settings.gradle
@@ -2,5 +2,6 @@ rootProject.name = 'ReactNativeFastImageExample'
 apply from: file("../node_modules/@react-native-community/cli-platform-android/native_modules.gradle"); applyNativeModulesSettingsGradle(settings)
 include ':app'
 
-include ':rnfastimage'
-project(':rnfastimage').projectDir = new File(rootProject.projectDir, '../../android')
+includeBuild('../node_modules/react-native-gradle-plugin')
+// include ':rnfastimage'
+// project(':rnfastimage').projectDir = new File(rootProject.projectDir, '../../android')
