--- a/ReactNativeFastImageExample/package.json
+++ b/ReactNativeFastImageExample/package.json
@@ -29,30 +29,31 @@
         "@react-navigation/bottom-tabs": "^6.2.0",
         "@react-navigation/native": "^6.0.8",
         "@react-navigation/stack": "^6.1.1",
-        "react": "17.0.2",
-        "react-native": "0.67.2",
-        "react-native-gesture-handler": "^2.2.0",
+        "react": "18.2.0",
+        "react-native": "0.71.1",
+        "react-native-gesture-handler": "^2.9.0",
         "react-native-image-picker": "^4.7.3",
         "react-native-image-progress": "^1.2.0",
-        "react-native-reanimated": "2.3.0",
+        "react-native-reanimated": "2.14.4",
         "react-native-safe-area-context": "^3.3.2",
-        "react-native-screens": "^3.10.2",
+        "react-native-screens": "^3.19.0",
         "react-native-status-bar-height": "^2.6.0",
         "react-native-vector-icons": "^8.1.0"
     },
     "devDependencies": {
-        "@babel/core": "^7.12.9",
-        "@babel/runtime": "^7.12.5",
+        "@babel/core": "^7.20.12",
+        "@babel/preset-env": "^7.20.2",
+        "@babel/runtime": "^7.20.13",
         "@react-native-community/eslint-config": "^2.0.0",
         "@types/jest": "^26.0.23",
         "@types/react-native": "^0.66.15",
-        "@types/react-test-renderer": "^17.0.1",
+        "@types/react-test-renderer": "^18.0.0",
         "babel-jest": "^26.6.3",
         "babel-plugin-module-resolver": "^4.1.0",
         "eslint": "^7.14.0",
         "jest": "^26.6.3",
-        "metro-react-native-babel-preset": "^0.66.2",
-        "react-test-renderer": "17.0.2",
+        "metro-react-native-babel-preset": "0.74.1",
+        "react-test-renderer": "18.2.0",
         "typescript": "^4.5.5"
     }
 }
